syntax = "proto3";

package echo.v1;

import "v1/common.proto";

option go_package = "github.com/xKoRx/echo/sdk/pb/v1;echov1";

// TradeIntent representa la intención de un trade desde un Master
message TradeIntent {
  string trade_id = 1;           // UUIDv7 único para este trade
  int64 timestamp_ms = 2;        // Timestamp en milisegundos
  string client_id = 3;          // Identificador del cliente EA (master)
  string symbol = 4;             // Símbolo del instrumento
  OrderSide side = 5;            // BUY o SELL
  double lot_size = 6;           // Tamaño en lotes
  double price = 7;              // Precio de apertura en el master
  int64 magic_number = 8;        // MagicNumber MT4/MT5
  int32 ticket = 9;              // Ticket MT4/MT5 del master
  
  // Opcional para iteraciones futuras
  optional double stop_loss = 10;
  optional double take_profit = 11;
  optional string comment = 12;
  optional int32 attempt = 13;   // Número de intento para reintentos
  
  // Timestamps para latencia E2E (Issue #C1)
  TimestampMetadata timestamps = 20;
}

// TradeClose representa el cierre de un trade del Master
message TradeClose {
  string trade_id = 1;
  int64 timestamp_ms = 2;
  string client_id = 3;          // Cliente que cerró (Issue #M4)
  string account_id = 4;         // Account ID del master (Issue #M4)
  int32 ticket = 5;
  string symbol = 6;             // Símbolo para correlación (Issue #M4)
  int64 magic_number = 7;        // MagicNumber para correlación (Issue #M4)
  double close_price = 8;
  optional double profit = 9;
  optional string reason = 10;   // "manual", "sl", "tp", "signal"
}

// TradeModify representa la modificación de SL/TP de un trade del Master
message TradeModify {
  string trade_id = 1;
  int64 timestamp_ms = 2;
  int32 ticket = 3;
  optional double new_stop_loss = 4;
  optional double new_take_profit = 5;
}

// ExecuteOrder comando para que un slave ejecute una orden
message ExecuteOrder {
  string command_id = 1;         // UUID del comando
  string trade_id = 2;           // TradeID original del master
  int64 timestamp_ms = 3;
  string target_client_id = 4;   // Slave destino (Issue #C5)
  string target_account_id = 5;  // Account ID del slave destino (Issue #C5)
  string symbol = 6;
  OrderSide side = 7;
  double lot_size = 8;
  int64 magic_number = 9;
  
  optional double stop_loss = 10;
  optional double take_profit = 11;
  optional string comment = 12;
  
  // Timestamps para latencia E2E (Issue #C1)
  TimestampMetadata timestamps = 20;
}

// CloseOrder comando para cerrar una orden en slave
message CloseOrder {
  string command_id = 1;
  string trade_id = 2;
  int64 timestamp_ms = 3;
  int32 ticket = 4;              // Ticket del slave a cerrar
  string target_client_id = 5;   // Slave destino (Issue #C3)
  string target_account_id = 6;  // Account ID del slave destino (Issue #C3)
  string symbol = 7;              // Símbolo para validación (Issue #C3)
  int64 magic_number = 8;         // MagicNumber para búsqueda si ticket==0 (Issue #C3)
  optional double lot_size = 9;   // Para cierres parciales
  
  // Timestamps para latencia E2E (Issue #C1)
  TimestampMetadata timestamps = 20;
}

// ModifyOrder comando para modificar SL/TP en slave
message ModifyOrder {
  string command_id = 1;
  string trade_id = 2;
  int64 timestamp_ms = 3;
  int32 ticket = 4;
  optional double new_stop_loss = 5;
  optional double new_take_profit = 6;
}

// ExecutionResult resultado de la ejecución de un comando en slave
message ExecutionResult {
  string command_id = 1;
  string trade_id = 2;           // TradeID original para correlación (Issue #C2)
  bool success = 3;
  int32 ticket = 4;              // Ticket generado si success=true
  ErrorCode error_code = 5;
  optional string error_message = 6;
  optional double executed_price = 7;
  optional int64 execution_time_ms = 8;
  
  // Timestamps para latencia E2E (Issue #C1)
  TimestampMetadata timestamps = 20;
}

// AccountInfo información de cuenta reportada por cliente
message AccountInfo {
  string account_id = 1;         // Identificador de cuenta
  double balance = 2;
  double equity = 3;
  double margin = 4;
  double margin_free = 5;
  double margin_level = 6;
  int64 timestamp_ms = 7;
}

// PositionInfo información de posición abierta
message PositionInfo {
  int32 ticket = 1;
  string symbol = 2;
  OrderSide side = 3;
  double volume = 4;
  double open_price = 5;
  optional double stop_loss = 6;
  optional double take_profit = 7;
  double profit = 8;
  int64 magic_number = 9;
  optional string comment = 10;
  int64 open_time_ms = 11;
}

// SymbolInfo especificaciones de un símbolo del broker
message SymbolInfo {
  string broker_symbol = 1;      // Nombre del símbolo en el broker
  string canonical_symbol = 2;   // Nombre canónico normalizado
  int32 digits = 3;              // Decimales
  double point = 4;              // Tamaño del point
  double tick_size = 5;
  double tick_value = 6;
  double min_lot = 7;
  double max_lot = 8;
  double lot_step = 9;
  int32 stop_level = 10;         // Nivel mínimo de stop en points
  optional double contract_size = 11;
  optional string description = 12;
}

